--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ main{
     border-radius: 5px;
     text-align: center;
     padding: 20px;
-    background-color: orange;
+    background-color: lightgrey;
     box-shadow: 5px 5px 5px 5px lightgrey;
 }
 h1{
@@ -18,6 +18,7 @@ header{
     color: blue;
     padding: 2px;
     background-color: yellow;
+    border-radius: 5px;
 }
 body{
     background-color: white;
@@ -33,4 +34,7 @@ img{
     height: 50px;
     width: auto;
     box-shadow: 5px 5px 5px 5px yellow;
+}
+.todo{
+  margin-right: 100px;
 }
