--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@ main{
     color: crimson;
     padding: 2px;
     height: auto;
+    width: 400px;
+    margin: auto;
     border: 1px solid grey;
     border-radius: 5px;
     text-align: center;
@@ -17,7 +19,7 @@ h1{
 header{
     color: blue;
     padding: 2px;
-    background-color: yellow;
+    background-color: white;
     border-radius: 5px;
 }
 body{
@@ -27,13 +29,15 @@ body{
     text-align: center;
 }
 footer{
-    background-color: crimson;
+    background-color: white;
     padding: 20px;
+    
 }
 img{
     height: 50px;
     width: auto;
-    box-shadow: 5px 5px 5px 5px yellow;
+    box-shadow: 0px 0px 5px 5px yellow;
+
 }
 .todo{
   margin-right: 100px;
