--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ main{
     border-radius: 5px;
     text-align: center;
     padding: 20px;
-    background-color: lightgrey;
+    background-color: white;
     box-shadow: 5px 5px 5px 5px lightgrey;
 }
 h1{
